tests/ui/formatter/fail/duplicate_fmt.stderr
error: duplicate `fmt` handler specified
 --> tests/ui/formatter/fail/duplicate_fmt.rs:4:36
  |
4 | #[error(fmt = crate::format_error, fmt = crate::format_error)]
  |                                    ^^^
